--- a/src/app/components/home/more-proyects/more-proyects.component.html
+++ b/src/app/components/home/more-proyects/more-proyects.component.html
@@ -8,15 +8,15 @@
             </div>
             <div class="mt-5">
                 <div class="row p-0">
-                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" disable-data-aos="fade-up" disable-data-aos-duration="1000">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
                         <div class="more-proyect-box">
                             <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="https://pokemonlist.andresjosehr.com" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
-                                    <a style='color: inherit' href="https://github.com/andresjosehr/pokemon-angular" target="_blank"><i class="ml-4 fab fa-github"></i></a>                                    
+                                    <a (click)='analyticsService.sendAnalyticEvent("click_pokemonlist_external_link", "proyects", "click")' style='color: inherit' href="https://pokemonlist.andresjosehr.com" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                                    <a (click)='analyticsService.sendAnalyticEvent("click_pokemonlist_github", "proyects", "click")' style='color: inherit' href="https://github.com/andresjosehr/pokemon-angular" target="_blank"><i class="ml-4 fab fa-github"></i></a>                                    
                                 </div>
                                 <h5 class="other-proyect-title mt-4">Pokemon</h5>
                                 <p class="other-proyect-description">
@@ -34,15 +34,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" disable-data-aos="fade-up" disable-data-aos-duration="1000">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
                         <div class="more-proyect-box">
                             <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="https://comingsoonpage.andresjosehr.com/" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
-                                    <a style='color: inherit' href="https://github.com/andresjosehr/coming-soon-page" target="_blank"><i class="ml-4 fab fa-github"></i></a>                                    
+                                    <a (click)='analyticsService.sendAnalyticEvent("click_comingsoonpage_external_link", "proyects", "click")' style='color: inherit' href="https://comingsoonpage.andresjosehr.com/" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                                    <a (click)='analyticsService.sendAnalyticEvent("click_comingsoonpage_github", "proyects", "click")' style='color: inherit' href="https://github.com/andresjosehr/coming-soon-page" target="_blank"><i class="ml-4 fab fa-github"></i></a>                                    
                                 </div>
                                 <h5 class="other-proyect-title mt-4">Coming soon page</h5>
                                 <p class="other-proyect-description">
@@ -61,15 +61,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" disable-data-aos="fade-up" disable-data-aos-duration="1000">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
                         <div class="more-proyect-box">
                             <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="https://fourcardfeaturesection.andresjosehr.com/" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
-                                    <a style='color: inherit' href="https://github.com/andresjosehr/fourd-card-feature-section" target="_blank"><i class="ml-4 fab fa-github"></i></a>                                    
+                                    <a (click)='analyticsService.sendAnalyticEvent("click_fourcardfeaturesection_external_link", "proyects", "click")' style='color: inherit' href="https://fourcardfeaturesection.andresjosehr.com/" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                                    <a (click)='analyticsService.sendAnalyticEvent("click_fourcardfeaturesection_github", "proyects", "click")' style='color: inherit' href="https://github.com/andresjosehr/fourd-card-feature-section" target="_blank"><i class="ml-4 fab fa-github"></i></a>                                    
                                 </div>
                                 <h5 class="other-proyect-title mt-4">Four card feature section</h5>
                                 <p class="other-proyect-description">
@@ -87,15 +87,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" disable-data-aos="fade-up" disable-data-aos-duration="1000">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
                         <div class="more-proyect-box">
                             <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="https://testimonialsslider.andresjosehr.com/" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
-                                    <a style='color: inherit' href="https://github.com/andresjosehr/testimonials-slider-app" target="_blank"><i class="ml-4 fab fa-github"></i></a>                                    
+                                    <a (click)='analyticsService.sendAnalyticEvent("click_testimonialsslider_external_link", "proyects", "click")' style='color: inherit' href="https://testimonialsslider.andresjosehr.com/" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
+                                    <a (click)='analyticsService.sendAnalyticEvent("click_testimonialsslider_github", "proyects", "click")' style='color: inherit' href="https://github.com/andresjosehr/testimonials-slider-app" target="_blank"><i class="ml-4 fab fa-github"></i></a>                                    
                                 </div>
                                 <h5 class="other-proyect-title mt-4">Testimonial slider</h5>
                                 <p class="other-proyect-description">
@@ -115,15 +115,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" disable-data-aos="fade-up" disable-data-aos-duration="1000">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
                         <div class="more-proyect-box">
                             <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="https://articlepreview.andresjosehr.com/" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
-                                    <a style='color: inherit' href="https://github.com/andresjosehr/article-preview-app" target="_blank"><i class="ml-4 fab fa-github"></i></a>
+                                    <a (click)='analyticsService.sendAnalyticEvent("click_articlepreview_external_link", "proyects", "click")' style='color: inherit' href="https://articlepreview.andresjosehr.com/" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
+                                    <a (click)='analyticsService.sendAnalyticEvent("click_articlepreview_github", "proyects", "click")' style='color: inherit' href="https://github.com/andresjosehr/article-preview-app" target="_blank"><i class="ml-4 fab fa-github"></i></a>
                                 </div>
                                 <h5 class="other-proyect-title mt-4">Article preview</h5>
                                 <p class="other-proyect-description">
@@ -141,15 +141,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" disable-data-aos="fade-up" disable-data-aos-duration="1000">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
                         <div class="more-proyect-box">
                             <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
                                     <img  src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="https://socialproofsection.andresjosehr.com" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
-                                    <a style='color: inherit' href="https://github.com/andresjosehr/social-proof-section" target="_blank"><i class="ml-4 fab fa-github"></i></a>
+                                    <a (click)='analyticsService.sendAnalyticEvent("click_socialproofsection_external_link", "proyects", "click")' style='color: inherit' href="https://socialproofsection.andresjosehr.com" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
+                                    <a (click)='analyticsService.sendAnalyticEvent("click_socialproofsection_github", "proyects", "click")' style='color: inherit' href="https://github.com/andresjosehr/social-proof-section" target="_blank"><i class="ml-4 fab fa-github"></i></a>
                                 </div>
                                 <h5 class="other-proyect-title mt-4">Social proof section</h5>
                                 <p class="other-proyect-description">Proyecto personal de una página diseñada a partir de un diseño hecho en figma.
@@ -165,15 +165,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" disable-data-aos="fade-up" disable-data-aos-duration="1000">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
                         <div class="more-proyect-box">
                             <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="https://faqaccordion.andresjosehr.com" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
-                                    <a style='color: inherit' href="https://andresjosehr.github.io/faq-accordion" target="_blank"><i class="ml-4 fab fa-github"></i></a>
+                                    <a (click)='analyticsService.sendAnalyticEvent("click_faqaccordion_external_link", "proyects", "click")' style='color: inherit' href="https://faqaccordion.andresjosehr.com" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
+                                    <a (click)='analyticsService.sendAnalyticEvent("click_faqaccordion_github", "proyects", "click")' style='color: inherit' href="https://andresjosehr.github.io/faq-accordion" target="_blank"><i class="ml-4 fab fa-github"></i></a>
                                 </div>
                                 <h5 class="other-proyect-title mt-4">FAQ accordion card</h5>
                                 <p class="other-proyect-description">
@@ -189,15 +189,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" disable-data-aos="fade-up" disable-data-aos-duration="1000">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
                         <div class="more-proyect-box">
                             <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="https://profilecard.andresjosehr.com" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
-                                    <a style='color: inherit' href="https://github.com/andresjosehr/profile-card-component" target="_blank"><i class="ml-4 fab fa-github"></i></a>
+                                    <a (click)='analyticsService.sendAnalyticEvent("click_profilecard_external_link", "proyects", "click")' style='color: inherit' href="https://profilecard.andresjosehr.com" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
+                                    <a (click)='analyticsService.sendAnalyticEvent("click_profilecard_github", "proyects", "click")' style='color: inherit' href="https://github.com/andresjosehr/profile-card-component" target="_blank"><i class="ml-4 fab fa-github"></i></a>
                                 </div>
                                 <h5 class="other-proyect-title mt-4">Profile card</h5>
                                 <p class="other-proyect-description">
