--- a/src/app/components/general/footer/footer.component.html
+++ b/src/app/components/general/footer/footer.component.html
@@ -1,28 +1,27 @@
 <footer>
-    <!-- [@animateFooter] -->
-    <div>
+    <div [@animateFooter]>
         <ul class="footer-left-bar d-none d-md-block">
             <li>
-                <a href="https://github.com/andresjosehr" target='_blank'>
+                <a (click)='analyticsService.sendAnalyticEvent("click_github", "footer", "github")' href="https://github.com/andresjosehr" target='_blank'>
                     <i class="fab fa-github"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/jose-andres-hernandez-ross-95683b106/" target='_blank'>
+                <a (click)='analyticsService.sendAnalyticEvent("click_linkedin", "footer", "github")' href="https://www.linkedin.com/in/jose-andres-hernandez-ross-95683b106/" target='_blank'>
                     <i class="fab fa-linkedin-in"></i>
                 </a>
             </li>
         </ul>
         <div class="footer-right-bar d-none d-md-block">
-            <a href="#" target='_blank'>contacto@andresjosehr.com </a>
+            <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "footer", "email")' href="mailto:contacto@andresjosehr" target='_blank'>contacto@andresjosehr.com </a>
         </div>
     </div>
 
     <div class="footer-credits text-center" >
-        <a href="https://github.com/bchiang7/v4" target="_blank" rel="nofollow noopener noreferrer">
+        <a (click)='analyticsService.sendAnalyticEvent("click_github_portfolio_andresjose", "footer", "click")' href="https://github.com/andresjosehr/andresjosehr-portfolio" target="_blank" rel="nofollow noopener noreferrer">
             <div>Built with Angular by Jose Andres</div>
         </a>
-        <a href="https://github.com/bchiang7/v4" target="_blank" rel="nofollow noopener noreferrer">
+        <a (click)='analyticsService.sendAnalyticEvent("click_github_portfolio_brittany", "footer", "click")' href="https://github.com/bchiang7/v4" target="_blank" rel="nofollow noopener noreferrer">
             <div class="mt-2">Designed by Brittany Chiang</div>
         </a>
     </div>
