--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -1,6 +1,5 @@
 <section class="section banner">
-    <div class="container">
-        <!-- [@bannerTrigger] -->
+    <div [@bannerTrigger] class="container">
         <div class="section-box-banner">
             <div class="content">
                 <div>
@@ -21,7 +20,7 @@
                 </div>
             </div>
             <div class="div-btn-banner" >
-                <a href="mailto:contacto@andresjosehr.com" target="_black" class="main-btn">¡Saludame!</a>
+                <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "banner", "email")' href="mailto:contacto@andresjosehr.com" target="_black" class="main-btn">¡Saludame!</a>
             </div>
         </div>
     </div>
