--- a/src/app/components/home/contact/contact.component.html
+++ b/src/app/components/home/contact/contact.component.html
@@ -11,7 +11,7 @@
                 Estaré encantado de recibir tu contacto si quieres conversar acerca de nuevas oportunidades. Escríbeme, y te responderé tan pronto como vea tu mensaje.
             </p>
             <div class="mt-5">
-                <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "contact", "email")' href="mailto:contacto@andresjosehr.com" target="_blank" class="main-btn" data-aos="fade-up" data-aos-duration="1000">
+                <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "contact", "email")' href="mailto:andresjosehr@gmail.com" target="_blank" class="main-btn" data-aos="fade-up" data-aos-duration="1000">
                     Contacto
                 </a>
             </div>
