--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="div-btn-banner" >
-                <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "banner", "email")' href="mailto:contacto@andresjosehr.com" target="_black" class="main-btn">¡Saludame!</a>
+                <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "banner", "email")' href="mailto:andresjosehr@gmail.com" target="_black" class="main-btn">¡Saludame!</a>
             </div>
         </div>
     </div>
