Linkedin URL updated

--- a/src/app/components/general/footer/footer.component.html
+++ b/src/app/components/general/footer/footer.component.html
@@ -7,7 +7,7 @@
                 </a>
             </li>
             <li>
-                <a (click)='analyticsService.sendAnalyticEvent("click_linkedin", "footer", "github")' href="https://www.linkedin.com/in/jose-andres-hernandez-ross-95683b106/" target='_blank'>
+                <a (click)='analyticsService.sendAnalyticEvent("click_linkedin", "footer", "github")' href="https://www.linkedin.com/in/andresjosehr/" target='_blank'>
                     <i class="fab fa-linkedin-in"></i>
                 </a>
             </li>
