Workana init commit

--- a/src/app/components/general/footer/footer.component.html
+++ b/src/app/components/general/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
     <div [@animateFooter]>
         <ul class="footer-left-bar d-none d-md-block">
-            <li>
+           <!--  <li>
                 <a (click)='analyticsService.sendAnalyticEvent("click_github", "footer", "github")' href="https://github.com/andresjosehr" target='_blank'>
                     <i class="fab fa-github"></i>
                 </a>
@@ -10,15 +10,15 @@
                 <a (click)='analyticsService.sendAnalyticEvent("click_linkedin", "footer", "github")' href="https://www.linkedin.com/in/andresjosehr/" target='_blank'>
                     <i class="fab fa-linkedin-in"></i>
                 </a>
-            </li>
+            </li> -->
         </ul>
         <div class="footer-right-bar d-none d-md-block">
-            <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "footer", "email")' href="mailto:andresjosehr@gmail.com" target='_blank'>andresjosehr@gmail.com </a>
+            <!-- <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "footer", "email")' href="mailto:andresjosehr@gmail.com" target='_blank'> andresjosehr@gmail.com </a> -->
         </div>
     </div>
 
     <div class="footer-credits text-center" >
-        <a (click)='analyticsService.sendAnalyticEvent("click_github_portfolio_andresjose", "footer", "click")' href="https://github.com/andresjosehr/andresjosehr-portfolio" target="_blank" rel="nofollow noopener noreferrer">
+        <a (click)='analyticsService.sendAnalyticEvent("click_github_portfolio_andresjose", "footer", "click")' href="#" target="_blank" rel="nofollow noopener noreferrer">
             <div>Built with Angular by Jose Andres</div>
         </a>
         <a (click)='analyticsService.sendAnalyticEvent("click_github_portfolio_brittany", "footer", "click")' href="https://github.com/bchiang7/v4" target="_blank" rel="nofollow noopener noreferrer">
