--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -19,9 +19,9 @@
                     </p>
                 </div>
             </div>
-            <div class="div-btn-banner" >
+            <!-- <div class="div-btn-banner" >
                 <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "banner", "email")' href="mailto:andresjosehr@gmail.com" target="_black" class="main-btn">¡Saludame!</a>
-            </div>
+            </div> -->
         </div>
     </div>
 </section>
