--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -6,7 +6,7 @@
                     <h1>Hola, mi nombre es</h1>
                 </div>
                 <div class='banner-title'>
-                    <h2>José Hernández.</h2>
+                    <h2>Andrés Ross.</h2>
                     <h3>Frontend Developer</h3>
                 </div>
                 <div class='banner-description' >
